removed console.logs and fixed centering cards on small screens

--- a/github-user-card/src/index.css
+++ b/github-user-card/src/index.css
@@ -21,6 +21,7 @@ code {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 10px;
 }
 
